# htl

./: CMakeLists.txt  README.md
include/htl/: arena.hpp  dual.hpp  ndarray.hpp  shared_span.hpp  static_arena.hpp  static_vector.hpp
include/htl/details/: base_arena.hpp  npy.hpp
tests/: CMakeLists.txt  shared_span_tests.cpp  tests_main.cpp
